// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListArticles lists all cooccurrences 1`] = `
Object {
  "data": Object {
    "ListCooccurrences": Object {
      "edges": Array [
        Object {
          "cursor": "WyJsaXN0Q29vY2N1cnJlbmNlVGVzdDIiXQ==",
          "node": Object {
            "id": "listCooccurrenceTest2",
          },
        },
        Object {
          "cursor": "WyJsaXN0Q29vY2N1cnJlbmNlVGVzdDEiXQ==",
          "node": Object {
            "id": "listCooccurrenceTest1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJsaXN0Q29vY2N1cnJlbmNlVGVzdDIiXQ==",
        "lastCursor": "WyJsaXN0Q29vY2N1cnJlbmNlVGVzdDEiXQ==",
      },
      "totalCount": 2,
    },
  },
}
`;

exports[`ListArticles sorts: by updatedAt DESC 1`] = `
Object {
  "data": Object {
    "ListCooccurrences": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "listCooccurrenceTest2",
            "updatedAt": "2020-02-03T00:02:00.000Z",
          },
        },
        Object {
          "node": Object {
            "id": "listCooccurrenceTest1",
            "updatedAt": "2020-02-03T00:01:00.000Z",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzE1ODA2ODgxMjAwMDAsImxpc3RDb29jY3VycmVuY2VUZXN0MiJd",
        "lastCursor": "WzE1ODA2ODgwNjAwMDAsImxpc3RDb29jY3VycmVuY2VUZXN0MSJd",
      },
      "totalCount": 2,
    },
  },
}
`;
